[gd_scene load_steps=4 format=3 uid="uid://biao1gflwm3w0"]

[ext_resource type="Script" path="res://scenes/pop_up_sauvegarde.gd" id="1_ackgj"]
[ext_resource type="Texture2D" uid="uid://dnbrhgh7r124k" path="res://images/dialog-ok-apply.svg" id="2_r5tmr"]
[ext_resource type="Texture2D" uid="uid://bsdu030hw6okp" path="res://images/dialog-cancel.svg" id="3_nceo1"]

[node name="PopUpSauvegarde" type="ColorRect"]
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color(1, 1, 1, 0.392157)
script = ExtResource("1_ackgj")

[node name="ColorRect" type="ColorRect" parent="."]
custom_minimum_size = Vector2(300, 150)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -75.0
offset_right = 150.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.258824, 0.258824, 0.258824, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -87.0
offset_top = -32.5
offset_right = 87.0
offset_bottom = 32.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="HBoxContainer" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="NomSauveg" type="LineEdit" parent="ColorRect/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(145, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
max_length = 20

[node name="Extension" type="Label" parent="ColorRect/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 8
text = ".ext"

[node name="HBoxContainer2" type="HBoxContainer" parent="ColorRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 2
theme_override_constants/separation = 10

[node name="Oui" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer2"]
layout_mode = 2
icon = ExtResource("2_r5tmr")

[node name="Non" type="Button" parent="ColorRect/VBoxContainer/HBoxContainer2"]
layout_mode = 2
icon = ExtResource("3_nceo1")

[connection signal="text_submitted" from="ColorRect/VBoxContainer/HBoxContainer/NomSauveg" to="." method="_on_nom_sauveg_text_submitted"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer2/Oui" to="." method="_on_oui_pressed"]
[connection signal="pressed" from="ColorRect/VBoxContainer/HBoxContainer2/Non" to="." method="_on_non_pressed"]
